knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/pqcrush__Account_Plan__c/fields/pqcrush__Summary__c.field-meta.xml
<CustomField>
    <fullName>pqcrush__Summary__c</fullName>
    <label>Summary</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>