knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/pqcrush__Account_Plan__c/fields/pqcrush__TestScore__c.field-meta.xml
<CustomField>
    <fullName>pqcrush__TestScore__c</fullName>
    <formula>IF(pqcrush__Default_Plan_Scoring__c ,
(
IF( $CustomMetadata.pqcrush__PQ_AP_Score__mdt.pqcrush__SWOT.pqcrush__Score_Object__c,
CASE(1,
IF(pqcrush__SWOT_Count__c &lt; $CustomMetadata.pqcrush__PQ_AP_Score__mdt.pqcrush__SWOT.pqcrush__Count_BP_Low__c, 1, 0), 0,
IF(pqcrush__SWOT_Count__c &lt; $CustomMetadata.pqcrush__PQ_AP_Score__mdt.pqcrush__SWOT.pqcrush__Count_BP_Mid__c, 1, 0), $CustomMetadata.pqcrush__PQ_AP_Score__mdt.pqcrush__SWOT.pqcrush__Score_BP_Low__c,
IF(pqcrush__SWOT_Count__c &lt; $CustomMetadata.pqcrush__PQ_AP_Score__mdt.pqcrush__SWOT.pqcrush__Count_BP_High__c, 1, 0), $CustomMetadata.pqcrush__PQ_AP_Score__mdt.pqcrush__SWOT.pqcrush__Score_BP_Mid__c,
$CustomMetadata.pqcrush__PQ_AP_Score__mdt.pqcrush__SWOT.pqcrush__Score_BP_High__c)
*
IF( $CustomMetadata.pqcrush__PQ_AP_Score__mdt.pqcrush__SWOT.pqcrush__Use_Time_Decay__c,
CASE(1,
IF(TODAY() - DATEVALUE(pqcrush__SWOT_Max_LMD__c) &lt; $CustomMetadata.pqcrush__PQ_AP_Score__mdt.pqcrush__SWOT.pqcrush__Time_BP_Low__c, 1, 0), 1,
IF(TODAY() - DATEVALUE(pqcrush__SWOT_Max_LMD__c) &lt; $CustomMetadata.pqcrush__PQ_AP_Score__mdt.pqcrush__SWOT.pqcrush__Time_BP_Mid__c, 1, 0), $CustomMetadata.pqcrush__PQ_AP_Score__mdt.pqcrush__SWOT.pqcrush__Time_BP_Mult_Low__c,
IF(TODAY() - DATEVALUE(pqcrush__SWOT_Max_LMD__c) &lt; $CustomMetadata.pqcrush__PQ_AP_Score__mdt.pqcrush__SWOT.pqcrush__Time_BP_High__c, 1, 0), $CustomMetadata.pqcrush__PQ_AP_Score__mdt.pqcrush__SWOT.pqcrush__Time_BP_Mult_Mid__c,
$CustomMetadata.pqcrush__PQ_AP_Score__mdt.pqcrush__SWOT.pqcrush__Time_BP_Mult_High__c), 1), 0)),

(IF( pqcrush__SWOT_Count__c &gt; $CustomMetadata.pqcrush__PQ_AP_Score__mdt.pqcrush__SWOT.pqcrush__Threshold_Limit__c , $CustomMetadata.pqcrush__PQ_AP_Score__mdt.pqcrush__SWOT.pqcrush__Category_Point_Total__c, (pqcrush__SWOT_Count__c / $CustomMetadata.pqcrush__PQ_AP_Score__mdt.pqcrush__SWOT.pqcrush__Threshold_Limit__c)* $CustomMetadata.pqcrush__PQ_AP_Score__mdt.pqcrush__SWOT.pqcrush__Category_Point_Total__c))
*
IF( $CustomMetadata.pqcrush__PQ_AP_Score__mdt.pqcrush__SWOT.pqcrush__Use_Time_Decay__c,
CASE(1,
IF(TODAY() - DATEVALUE(pqcrush__SWOT_Max_LMD__c) &lt; $CustomMetadata.pqcrush__PQ_AP_Score__mdt.pqcrush__SWOT.pqcrush__Time_BP_Low__c, 1, 0), 1,
IF(TODAY() - DATEVALUE(pqcrush__SWOT_Max_LMD__c) &lt; $CustomMetadata.pqcrush__PQ_AP_Score__mdt.pqcrush__SWOT.pqcrush__Time_BP_Mid__c, 1, 0), $CustomMetadata.pqcrush__PQ_AP_Score__mdt.pqcrush__SWOT.pqcrush__Time_BP_Mult_Low__c,
IF(TODAY() - DATEVALUE(pqcrush__SWOT_Max_LMD__c) &lt; $CustomMetadata.pqcrush__PQ_AP_Score__mdt.pqcrush__SWOT.pqcrush__Time_BP_High__c, 1, 0), $CustomMetadata.pqcrush__PQ_AP_Score__mdt.pqcrush__SWOT.pqcrush__Time_BP_Mult_Mid__c,
$CustomMetadata.pqcrush__PQ_AP_Score__mdt.pqcrush__SWOT.pqcrush__Time_BP_Mult_High__c), 1))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>TestSWOTScore</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>