knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/pqcrush__Account_Plan__c/fields/pqcrush__White_Space_Cell_Count__c.field-meta.xml
<CustomField>
    <fullName>pqcrush__White_Space_Cell_Count__c</fullName>
    <label>White Space Cell Count</label>
    <summarizedField>pqcrush__White_Space__c.pqcrush__Whitespace_Cell_Count__c</summarizedField>
    <summaryForeignKey>pqcrush__White_Space__c.pqcrush__Account_Plan__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>