knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/pqcrush__Account_Plan__c/fields/Value_Drivers__c.field-meta.xml
<CustomField>
    <fullName>Value_Drivers__c</fullName>
    <label>Best Route In</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>