knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/pqcrush__Account_Plan__c/recordTypes/pqcrush__Account_Plan.recordType-meta.xml
<RecordType>
    <fullName>pqcrush__Account_Plan</fullName>
    <active>true</active>
    <label>Account Plan</label>
</RecordType>