knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/pqcrush__Account_Plan__c/validationRules/pqcrush__Account_required_for_Account_Plan.validationRule-meta.xml
<ValidationRule>
    <fullName>pqcrush__Account_required_for_Account_Plan</fullName>
    <active>true</active>
    <description>If the Record Type is Account Plan, then the Account lookup is required.</description>
    <errorConditionFormula>AND(
   RecordType.DeveloperName = &apos;Account_Plan&apos;,
   ISBLANK( pqcrush__Account__c )
)</errorConditionFormula>
    <errorDisplayField>pqcrush__Account__c</errorDisplayField>
    <errorMessage>Account field is required.</errorMessage>
</ValidationRule>