knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/pqcrush__Account_Plan__c/listViews/pqcrush__All.listView-meta.xml
<ListView>
    <fullName>pqcrush__All</fullName>
    <columns>NAME</columns>
    <columns>pqcrush__Status__c</columns>
    <columns>pqcrush__Goal__c</columns>
    <columns>pqcrush__Account__c</columns>
    <columns>pqcrush__Account_Plan_Score__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>