knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/pqcrush__Account_Plan__c/listViews/pqcrush__My_Account_Plans.listView-meta.xml
<ListView>
    <fullName>pqcrush__My_Account_Plans</fullName>
    <columns>NAME</columns>
    <columns>pqcrush__Status__c</columns>
    <columns>pqcrush__Goal__c</columns>
    <columns>pqcrush__Account__c</columns>
    <columns>pqcrush__Account_Plan_Score__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Mine</filterScope>
    <label>My Account Plans</label>
</ListView>